@@ -1,17 +1,10 @@
 package it.robfrank.linklift.adapter.out.persitence;
 
-import com.arcadedb.Constants;
+import static org.assertj.core.api.Assertions.assertThat;
+
 import com.arcadedb.remote.RemoteDatabase;
 import it.robfrank.linklift.application.domain.model.AuthToken;
 import it.robfrank.linklift.config.DatabaseInitializer;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.testcontainers.containers.GenericContainer;
-import org.testcontainers.containers.wait.strategy.Wait;
-import org.testcontainers.junit.jupiter.Container;
-import org.testcontainers.junit.jupiter.Testcontainers;
-
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
@@ -19,8 +12,13 @@ import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-
-import static org.assertj.core.api.Assertions.assertThat;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.testcontainers.containers.GenericContainer;
+import org.testcontainers.containers.wait.strategy.Wait;
+import org.testcontainers.junit.jupiter.Container;
+import org.testcontainers.junit.jupiter.Testcontainers;
 
 @Testcontainers
 class ArcadeAuthTokenRepositoryTest {
@@ -151,8 +149,8 @@ class ArcadeAuthTokenRepositoryTest {
 
         // Assert
         assertThat(refreshTokens).hasSize(1);
-        assertThat(refreshTokens.get(0).tokenType()).isEqualTo(AuthToken.TokenType.REFRESH);
-        assertThat(refreshTokens.get(0).token()).startsWith("refresh-token");
+        assertThat(refreshTokens.getFirst().tokenType()).isEqualTo(AuthToken.TokenType.REFRESH);
+        assertThat(refreshTokens.getFirst().token()).startsWith("refresh-token");
     }
 
     @Test
